--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@sxzz/prettier-config",
+  "name": "@pzp/prettier-config",
   "version": "2.0.2",
   "packageManager": "pnpm@9.6.0",
   "description": "Prettier config for @sxzz",
   "license": "MIT",
-  "homepage": "https://github.com/sxzz/prettier-config#readme",
+  "homepage": "https://github.com/pzuopin/prettier-config#readme",
   "bugs": {
-    "url": "https://github.com/sxzz/prettier-config/issues"
+    "url": "https://github.com/pzuopin/prettier-config/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sxzz/prettier-config.git"
+    "url": "git+https://github.com/pzuopin/prettier-config.git"
   },
   "files": [
     "index.js"
